# falcondb.com

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Downloads/falcondb-main/falcondb-main/: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONSISTENCY.md  CONTRIBUTING.md  CROSS_SHARD_TXN.md  Cargo.toml  Dockerfile  Makefile  PROJECT_ANALYSIS.md  README.md  check_ct.rs  docker-compose.yml  falcon.toml
Downloads/falcondb-main/falcondb-main/.github/: CODEOWNERS  pull_request_template.md
Downloads/falcondb-main/falcondb-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Downloads/falcondb-main/falcondb-main/.github/workflows/: ci.yml  nightly-chaos.yml  release.yml
Downloads/falcondb-main/falcondb-main/bench_configs/: falcon.bench.toml  m1_baseline.toml  m1_results.md  windows_iocp_wal.toml
Downloads/falcondb-main/falcondb-main/bench_configs/latency/: cross_shard.toml  gc_stress.toml  overload_ramp.toml  steady_state.toml
Downloads/falcondb-main/falcondb-main/benchmarks/: README.md  RESULTS.md  bulk_insert_1000.sql  bulk_insert_10k.sql  test_lsm.sql
Downloads/falcondb-main/falcondb-main/benchmarks/falcondb/: config.toml  run.sh
Downloads/falcondb-main/falcondb-main/benchmarks/postgresql/: postgresql.conf  run.sh
Downloads/falcondb-main/falcondb-main/benchmarks/scripts/: run_all.sh  run_matrix.sh  run_workload.sh
Downloads/falcondb-main/falcondb-main/benchmarks/singlestore/: run.sh  singlestore.cnf
Downloads/falcondb-main/falcondb-main/benchmarks/voltdb/: deployment.xml  run.sh
Downloads/falcondb-main/falcondb-main/benchmarks/workloads/: analytic_scan.sql  batch_insert.sql  hot_contention.sql  multi_table_txn.sql  setup.sql  setup_batch.sql  setup_singlestore.sql  setup_voltdb.sql  single_table_oltp.sql
Downloads/falcondb-main/falcondb-main/clients/falcondb-jdbc/: COMPAT_MATRIX.md  pom.xml
Downloads/falcondb-main/falcondb-main/crates/falcon_bench/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_cli/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_cluster/: Cargo.toml  build.rs
Downloads/falcondb-main/falcondb-main/crates/falcon_common/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_enterprise/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_executor/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_native_server/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_observability/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_planner/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_proto/: Cargo.toml  build.rs
Downloads/falcondb-main/falcondb-main/crates/falcon_protocol_native/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_protocol_pg/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_raft/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_segment_codec/: Cargo.toml
Downloads/falcondb-main/falcondb-main/crates/falcon_server/: Cargo.toml  build.rs
Downloads/falcondb-main/falcondb-main/crates/falcon_sql_frontend/: Cargo.toml
Downloads/falcondb-main/falcondb-main/docker/: falcon.toml
Downloads/falcondb-main/falcondb-main/docs/: CONSISTENCY.md  INDEX.md  INSTALL.md  INSTALL_LINUX.md  OPERATIONS.md  UNINSTALL.md  UPGRADE.md  authentication.md  backup_restore.md  benchmark_methodology.md  bootstrap_flow.md  chaos_matrix.md  cli.md  cluster_access_model.md  cluster_ops.md  commercial_model.md  commit_sequence.md  compatibility_contract.md  compression_profiles.md  config_management.md  connection_model.md  control_plane.md  cost_capacity.md  csn_lsn_decoupling.md  design_ustm.md  distributed_hardening.md  enterprise_architecture.md  error_model.md  extended_scalar_functions.md  failover_behavior.md  failover_partition_sla.md  falconctl_ops.md  feature_gap_analysis.md  ga_hardening.md  ga_release_checklist.md  ga_sql_boundary.md  gameday.md  gateway_behavior.md  gc_safety_model.md  industry_edition_overview.md  (+43 more)
Downloads/falcondb-main/falcondb-main/evidence/: INDEX.md
Downloads/falcondb-main/falcondb-main/examples/: primary.toml  replica.toml
Downloads/falcondb-main/falcondb-main/falcondb-mes-workorder/: README.md
Downloads/falcondb-main/falcondb-main/falcondb-poc-backup-pitr/: README.md
Downloads/falcondb-main/falcondb-main/falcondb-poc-cost-efficiency/: README.md
Downloads/falcondb-main/falcondb-main/falcondb-poc-dcg/: README.md  run_demo.ps1  run_demo.sh
Downloads/falcondb-main/falcondb-main/falcondb-poc-failover-under-load/: README.md  run_demo.ps1  run_demo.sh
Downloads/falcondb-main/falcondb-main/falcondb-poc-migration/: README.md
Downloads/falcondb-main/falcondb-main/falcondb-poc-observability/: README.md
Downloads/falcondb-main/falcondb-main/falcondb-poc-pgbench/: README.md  run_benchmark.ps1  run_benchmark.sh
Downloads/falcondb-main/falcondb-main/installer/: FalconDB.wxs
Downloads/falcondb-main/falcondb-main/scripts/: bench_backpressure.sh  bench_failover_under_load.sh  bench_kernel_falcon_bench.sh  bench_pgbench_vs_postgres.ps1  bench_pgbench_vs_postgres.sh  bench_windows_iocp_wal.ps1  build_deb.sh  build_linux_dist.sh  build_msi.ps1  build_rpm.sh  build_windows_dist.ps1  chaos_injector.sh  ci_bench_smoke.sh  ci_clippy_gate.sh  ci_compat_contract_gate.sh  ci_distributed_chaos.sh  ci_failover_gate.sh  ci_ga_release_gate.sh  ci_gameday_gate.sh  ci_isolation_gate.sh  ci_jdbc_smoke.sh  ci_native_failover_under_load.sh  ci_native_jdbc_smoke.sh  ci_native_perf_gate.sh  ci_p0_contract_gate.sh  ci_perf_gate.sh  ci_perf_regression_gate.sh  ci_phase1_gates.sh  ci_production_gate.sh  ci_production_gate_v2.sh  ci_storage_gate.sh  ci_v101_crash_gate.sh  ci_v102_failover_gate.sh  ci_v102_test_matrix.sh  ci_v103_stability_gate.sh  ci_v104_determinism_gate.sh  ci_v1_release_gate.sh  ci_version_check.sh  cli_smoke.sh  collect_evidence.sh  (+26 more)
Downloads/falcondb-main/falcondb-main/tools/: bench_runner.sh  failover_demo.sh  local_cluster.toml
(+642 files in other folders)
