[workspace]
resolver = "2"
members = [
    "crates/falcon_common",
    "crates/falcon_storage",
    "crates/falcon_txn",
    "crates/falcon_protocol_pg",
    "crates/falcon_protocol_native",
    "crates/falcon_native_server",
    "crates/falcon_sql_frontend",
    "crates/falcon_planner",
    "crates/falcon_executor",
    "crates/falcon_raft",
    "crates/falcon_proto",
    "crates/falcon_cluster",
    "crates/falcon_observability",
    "crates/falcon_server",
    "crates/falcon_bench",
    "crates/falcon_cli",
    "crates/falcon_segment_codec",
    "crates/falcon_enterprise",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
bytes = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / Tracing / Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# SQL parsing
sqlparser = { version = "0.50", features = ["visitor"] }

# PG wire protocol
pgwire = "0.25"

# Concurrent data structures
dashmap = "6"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# gRPC / networking
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# Crypto / hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
aes-gcm = "0.10"
rand = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# TLS
tokio-rustls = "0.26"
rustls-pemfile = "2"

# CRC for WAL checksums
crc32fast = "1"

# Regex
regex = "1"

# Base64
base64 = "0.22"

# Compression
lz4_flex = "0.11"
zstd = "0.13"
zstd-safe = "7.2"
falcon_segment_codec = { path = "crates/falcon_segment_codec" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
