[package]
name = "falcon_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "fsql — FalconDB interactive CLI client (psql-compatible)"

[[bin]]
name = "fsql"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# PG client
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

# Async runtime
tokio = { workspace = true }

# Line editor
rustyline = "14"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Home directory resolution (history file)
dirs-next = "2"

# TTY detection (pager)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

