[package]
name = "falcon_storage"
version.workspace = true
edition.workspace = true

[features]
default = []
# Non-v1.0 storage engines (STUB / EXPERIMENTAL). Default OFF.
columnstore = []
disk_rowstore = []
lsm = []
# Linux 6.x io_uring backend for WAL I/O. Default OFF.
# Enable with: cargo build --features io_uring
io_uring = ["dep:io-uring"]
# Enterprise features (STUB). Default OFF.
encryption_tde = []
pitr = []
online_ddl_full = []
resource_isolation = []
tenant = []
cdc_stream = []

[dependencies]
falcon_common = { path = "../falcon_common" }
tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
crossbeam-skiplist.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
crc32fast.workspace = true
xxhash-rust.workspace = true
lz4_flex.workspace = true
zstd.workspace = true
falcon_segment_codec.workspace = true
sha2.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
aes-gcm.workspace = true
rand.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
nix = { version = "0.29", features = ["fs", "mount"] }

[dev-dependencies]
tempfile = "3"
